# fuzzy-search-metric-spaces

./: LICENSE  README.md
spellchecker-research/: CMakeLists.txt  main.cpp
spellchecker-research/data/: medium.txt
spellchecker-research/include/: BKTreeChecker.hpp  BaselineChecker.hpp  Distance.hpp  ISpellChecker.hpp  Tester.hpp  TrieChecker.hpp
spellchecker-research/src/: BKTreeChecker.cpp  BaselineChecker.cpp  Distance.cpp  TrieChecker.cpp
